--- a/style.css
+++ b/style.css
@@ -2,3 +2,11 @@ html, body {
   height: 100%;
   width: 100%;
 }
+h1 {
+  background: lightblue;
+  text-align: center;
+}
+ol {
+  background: lightcoral;
+  text-align: center;
+}
