--- a/Zen.css
+++ b/Zen.css
@@ -1,8 +1,3 @@
-body {
-  background-color: ghostwhite;
-  
-}
-
 header {
   background: none;
   background-color: rgba(80, 0, 0, .5);
@@ -11,7 +6,7 @@ header {
   font: italic normal 1.4em georgia, sans-serif;
   float: left;
   width: 100%;
-  border: outset;
+  border: 5px inset;
 }
 header > h2{
   color: rgba(255, 215, 0, .5);
@@ -21,8 +16,11 @@ header > h2{
   font-size: 90%;
   margin-bottom: 20px;
   padding-left: 5px;
-  background: rgba(355, 355, 355, .2);
-  
+  background: rgba(255, 255, 255, .2);  
+}
+header abbr:hover{
+  background-color: transparent;
+  color: rgba(255, 215, 0, .5);
 }
 h3 {
   color: white;
@@ -30,6 +28,7 @@ h3 {
 }
 body {
   background:url(https://wallpaperaccess.com/full/1251284.jpg) no-repeat top right;
+background-color: rgba(27,21,49,1);
 }
 
 .sidebar {
@@ -38,14 +37,37 @@ body {
 	top: 0; 
 	right: 0;
   float: right;
-  background-image: linear-gradient(rgba(355,0,355,.5), yellow) ;
+  
   margin-top: 150px;
   margin-right: 5px;
   padding: 5px;
-  
-	}
+/* the following portion of code was generated at https://www.gradient-animator.com/ */
+  background: linear-gradient(0deg, rgba(255,255,0,.7), rgba(255,0,255,.3));
+    background-size: 400% 400%;
+
+    -webkit-animation: AnimationName 7s ease infinite;
+    -moz-animation: AnimationName 7s ease infinite;
+    animation: AnimationName 7s ease infinite;
+}
+
+@-webkit-keyframes AnimationName {
+    0%{background-position:51% 0%}
+    50%{background-position:50% 100%}
+    100%{background-position:51% 0%}
+}
+@-moz-keyframes AnimationName {
+    0%{background-position:51% 0%}
+    50%{background-position:50% 100%}
+    100%{background-position:51% 0%}
+}
+@keyframes AnimationName {
+    0%{background-position:51% 0%}
+    50%{background-position:50% 100%}
+    100%{background-position:51% 0%}
+}
+/* end of generated code */
 .sidebar  ul{
-  background-color: rgba(355, 355, 355, .5);
+  background-color: rgba(255, 255, 255, .5);
   list-style: none;
 }
 a {
@@ -62,12 +84,8 @@ a:visited{
 a:visited:hover{
   color:gray;
 }
-/* [role=main]{
-  background-color: rgba(20,245,220,.3);
-  margin-right: 500px;
-} */
+
 #zen-explanation{
-  color: white;
   background-color: rgba(220,245,20,.3);
   margin-right: 400px;
   margin-left: 100px;
@@ -92,11 +110,46 @@ abbr:hover{
   text-decoration: none;
 }
 .participation{
-  background-color: rgba(355,0,355,.3) ;
+  background-color: rgba(255,0,255,.3) ;
   text-align: center;
   margin-right: 500px;
 }
 .participation h3{
-  background-color: rgba(355, 0, 355, .8);
+  background-color: rgba(220, 0, 255, .8);
 }
-
+.participation:hover{
+  background-color: rgba(255, 0, 255, .7);
+}
+.preamble:hover{
+  background-color: rgba(20,245,220,.7);
+}
+#zen-explanation:hover{
+  background-color: rgba(220,245,20,.7);
+}
+.benefits{
+  background-color: rgba(255,150,35,.3);
+  margin-right: 400px;
+  margin-left: 100px;
+  text-align: center;
+}
+.benefits h3{
+  background-color: rgba(255,150,35,.8);
+}
+.benefits:hover{
+  background-color: rgba(255,150,35,.7);
+}
+.requirements{
+  background-color: rgba(0, 255, 0, .3);
+  margin-right: 500px;
+  text-align: center;
+}
+.requirements h3{
+  background-color: rgba(0, 255, 0, .8);
+}
+.requirements:hover{
+  background-color: rgba(0, 255, 0, .7);
+}
+footer{
+  text-align: center;
+  background-color: rgba(255,255,255,.5);
+}
