--- a/Zen.css
+++ b/Zen.css
@@ -16,7 +16,8 @@ header > h2{
   font-size: 90%;
   margin-bottom: 20px;
   padding-left: 5px;
-  background: rgba(255, 255, 255, .2);  
+  background: rgba(255, 255, 255, .2); 
+  text-align: center;
 }
 header abbr:hover{
   background-color: transparent;
