--- a/blog.css
+++ b/blog.css
@@ -29,6 +29,8 @@ div{
   font-family: sans-serif;
   font-size: 56px;
   text-align: center;
+  background: lightseagreen;
+  border-radius: 50%;
 }
 #info{
   color: gray;
